online-store-web/kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: online-store-web
    version: v1
  name: online-store-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: online-store-web
      version: v1
  template:
    metadata:
      labels:
        app: online-store-web
        version: v1
    spec:
      containers:
        - name: online-store-web
          image: sangdongvan/istio-sample-online-store-web:0.1.5-SNAPSHOT
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 18021
              name: http
              protocol: TCP
            - containerPort: 8778
              name: jolokia
              protocol: TCP
            - containerPort: 9779
              name: prometheus
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 18021
            initialDelaySeconds: 120
            periodSeconds: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /health
              port: 18021
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 1
          securityContext:
            privileged: false
