online-store-web/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: online-store-web
  labels:
    app: online-store-web
spec:
  ports:
  - name: http
    port: 18021
  type: NodePort
  selector:
    app: online-store-web
